# fiches-haskell

./: .gitignore  README.md  README.org  bibliography.bib  cabal.sandbox.config  clean.sh  fiches.bib  fiches.tex  glossary.tex  haskell-thb-lt.cabal  haskell.html  haskell.org  haskellThbLt.cabal  haskell_thb_lt.cabal  html.gpp  latexmkrc  make.sh  master.tex  new.sh  orgmode.gpp  plan.md  reorder.sh  site.hs  stack.yaml  transform.sh
contents/: 05-devtools.md  10-devtools.md  10-devtools.org  20-language.md  20-language.org  30-functions.md  30-functions.org  40-idioms.md  40-idioms.org  40-io.md  40-working-with-data.md  50-data.md  50-data.org  50-idioms.md  50-io.md  60-Control.md  60-Control.org  60-Control.org.old  70-io.org  70-io.org.old  70-unsorted.md
contents_extras/: about.md  about.org  stressTest.md  stressTest.org
fiches/: 000-preamble.tex  010-datatypes.tex  020-debugging.tex  020-defining-types.tex  020-types.tex  030-cabal.tex  030-naming-rules.tex  035-identifiers.tex  040-lazy-evaluation.tex  050-defining-types.tex  050-functions-variables.tex  050-stdtypes.tex  060-defining-types.tex  060-lambdas.tex  060-rules.tex  060-working-with-lists.tex  070-lists.tex  070-polymorphism.tex  070-typeclasses.tex  080-functions-and-variables.tex  080-lazyness.tex  080-typeclasses.tex  085-defining-functions.tex  090-pattern-matching-and-guards.tex  090-recursivity.tex  090-referential-transparency.tex  090-variables.tex  100-conditionals.tex  100-lazyness.tex  110-partial-application.tex  120-lazyness.tex  120-lists.tex  120-modules.tex  120-typeclasses.tex  (+12 more)
(+163 files in other folders)
