name:               haskellThbLt
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , data-default == 0.5.*
                  , hakyll == 4.7.*
                  , pandoc == 1.15.*
  ghc-options:      -threaded
  default-language: Haskell2010
